--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,13 @@ dependencies:
   
   # For swipe gestures
   flutter_swipe_detector: ^2.0.0
+  
+  # For launching URLs
+  url_launcher: ^6.3.1
+  
+  # For local database (search history)
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
